@@ -1,5 +1,6 @@
 
 5.09  2014-06-24
+  - Improved .ep templates to make the current controller available as $c.
 
 5.08  2014-06-17
   - Added reset method to Mojo::IOLoop.
